# homework9

./: load_data.py  models.py  mongo_connect.py  parser.py  pyproject.toml
data/: authors.json
